--- a/_posts/2022-01-01-Parting-off-2021.md
+++ b/_posts/2022-01-01-Parting-off-2021.md
@@ -12,7 +12,10 @@ excerpt_separator: "<!--more-->"
 
 I know that most folks who suffered were more unlucky than careless. And because of this reason, I did develop low-key hate for people flunking covid protocols. At the same time, I am guilty of being lenient a few times because it turns out that even doing something as simple as wearing masks properly is tough af in practice. I remember [noting down the feelings](https://gist.github.com/satwikkansal/91eb33ae6cfb979ae9987963e224d893) during the peak of the second wave last year, which I keep coming back to from time to time to keep my optimism in check. People who religiously follow the boring protocols have my respect because that (plus vaccination) seems like the only way to contain the virus at manageable levels.
 
-It sucks that covid mania is still far from over, and there “probably” are multiple economic bubbles waiting to be popped, so I’m not sure if 2022 is going to be a shiny new year. But I hope everyone gets enough strength to stay disciplined and do the right thing when the time comes.
-And lastly, coming to the new year’s resolutions, I realise that I’ve lived under a rock and ghosted several imp people over the last couple of years, and I’d like to change that and catch up more often. I’m also not proud of just passively consuming cool internet content and contributing nothing back, so I do intend to create and post some meaningful content this year :rocket:
+It sucks that covid mania is still far from over, and there “probably” are multiple economic bubbles waiting to be popped, so I’m not sure if 2022 is going to be a shiny new year. I wish everyone gets enough strength to stay disciplined and mindful of the risks being taken.
 
-PS: Also, ffs, please don’t invest a lot of money in random crypto projects whose tech you don’t understand. And if you do wanna speculate, read about tokenomics at least :)
+And lastly, coming to this year’s resolutions, I realise that I’ve lived under a rock and ghosted several important people over the last couple of years. I’d like to change that for sure and catch up more often. I’m also not proud of just passively consuming cool internet content and contributing nothing back, so I do intend to create and post some meaningful content this year!
+
+On that note, wishing everyone a great 2022!
+
+PS: Also, ffs, please don’t invest a lot of money in random crypto projects unless you understand their tech. And if you do wanna speculate, read about tokenomics at least :)
