--- a/_posts/2022-01-01-Parting-off-2021.md
+++ b/_posts/2022-01-01-Parting-off-2021.md
@@ -16,6 +16,6 @@ It sucks that covid mania is still far from over, and there “probably” are m
 
 And lastly, coming to this year’s resolutions, I realise that I’ve lived under a rock and ghosted several important people over the last couple of years. I’d like to change that for sure and catch up more often. I’m also not proud of just passively consuming cool internet content and contributing nothing back, so I do intend to create and post some meaningful content this year!
 
-On that note, wishing everyone a great 2022!
+On that note, I'm really greatful for all the people I'm in touch with, be it be in-person or through the internet. Wishing you guys a great 2022!  
 
 PS: Also, ffs, please don’t invest a lot of money in random crypto projects unless you understand their tech. And if you do wanna speculate, read about tokenomics at least :)
