--- a/_posts/2022-01-01-Parting-off-2021.md
+++ b/_posts/2022-01-01-Parting-off-2021.md
@@ -8,7 +8,7 @@ layout: single
 excerpt_separator: "<!--more-->"
 ---
 
-2021 was a weird year. It turned out to be an ordinary one for me; living in my home, doing the same work, no fancy career leaps, or competitive achievements, or international trips. Had any of the pre-2020 years turned out like this, I’d have been mildly disappointed, but having witnessed several lives going topsy-turvy due to the covid chaos, it’d be stupid to not be satisfied having made it unscathed this far.
+2021 was a weird year. It turned out to be an ordinary one for me; living in my home, doing the same work, no fancy career leaps, or competitive achievements, or international trips. Had any of the pre-2020 years turned out like this, I’d have been mildly disappointed, but having witnessed several lives going topsy-turvy due to the covid chaos, it’d be stupid to not be satisfied having made it unscathed this far. You know, like the saying goes, a normal person wants a thousands things, a sick person only wants one.
 
 I know that most folks who suffered were more unlucky than careless. And because of this reason, I did develop low-key hate for people flunking covid protocols. At the same time, I am guilty of being lenient a few times because it turns out that even doing something as simple as wearing masks properly is tough af in practice. I remember [noting down the feelings](https://gist.github.com/satwikkansal/91eb33ae6cfb979ae9987963e224d893) during the peak of the second wave last year, which I keep coming back to from time to time to keep my optimism in check. People who religiously follow the boring protocols have my respect because that (plus vaccination) seems like the only way to contain the virus at manageable levels.
 
